# nepal-gateways

./: .gitignore  README.md  esewa_redirect.html  pyproject.toml
docs/: CONTRIBUTING.md
examples/: callback_test_esewa_v2.py  simple_callback_server.py  test_khalti.py  test_khalti_manuall.py
nepal_gateways/: __init__.py
nepal_gateways/core/: base.py  exceptions.py
nepal_gateways/esewa/: __init__.py  client.py  config.py
nepal_gateways/khalti/: client.py  config.py
tests/: test_esewa_client_v2.py  test_khalti_client.py
